# traildrop-firmware

./: .gitignore  CAL_PHASE2_TEST.md  CMakeLists.txt  MERGE_PROMPT.md  PHASE2_PROMPT.md  PHASE2_REVIEW.md  PHASE3A_BUILD_PROMPT.md  PHASE3B_BUILD_PROMPT.md  PHASE3C_BUILD_PROMPT.md  PHASE3D_BUILD_PROMPT.md  PHASE3_HARDWARE_TEST.md  PHASE4A5_BUILD_PROMPT.md  PHASE4A_BUILD_PROMPT.md  PHASE4B_BUILD_PROMPT.md  PHASE4C_BUILD_PROMPT.md  PHASE4D_BUILD_PROMPT.md  PHASE4_RESEARCH.md  PROMPT_REVIEW_RESULTS.md  README.md  SPI_INIT_BUILD_PROMPT.md  SPI_MUTEX_RESEARCH_PROMPT.md  SPI_RESEARCH.md  STANDALONE_SCOPE.md  WIRE_COMPAT_TEST_PROMPT.md  platformio.ini
docs/: wire_format.md
include/: config.h  (+1 more)
src/: CMakeLists.txt  main.cpp  main_full.cpp  main_test.cpp
src/app/: gpx.cpp  peers.h  waypoint.cpp
src/crypto/: encrypt.cpp  encrypt.h  hash.cpp  hash.h  identity.cpp  identity.h  token.cpp  token.h
src/hal/: battery.cpp  battery.h  display.cpp  display.h  gps.cpp  gps.h  keyboard.cpp  keyboard.h  power.cpp  power.h  radio.cpp  radio.h  storage.cpp  storage.h  trackball.cpp  trackball.h
src/msg/: lxmf.cpp  lxmf.h  lxmf_transport.cpp  lxmf_transport.h  msgpack.cpp  msgpack.h  waypoint.cpp  waypoint.h
src/net/: announce.cpp  announce.h  destination.cpp  destination.h  lxmf.cpp  lxmf.h  packet.cpp  packet.h  peer.cpp  peer.h  transport.cpp  transport.h
src/ui/: display_ui.cpp  display_ui.h  screen_boot.cpp  screen_detail.cpp  screen_drop.cpp  screen_emergency.cpp  screen_main.cpp  screen_peers.cpp  screen_send.cpp  screen_settings.cpp  theme.cpp  theme.h  ui.cpp  ui.h
(+25 files in other folders)
